tests/pipeline_completeness/sub_plus_init_completeness.err.expected
error: at 21:5: [SUB-CopyOfNonCopy] In function 'sub_copy_of_non_copy', block 'entry': cannot copy non-Copy type Linear
    |
 20 |   entry:
 21 |     b = copy a;
    |     ^^^^^^^^^^
 22 |     call take(move b);
    |
  hint: since the type is not Copy, try moving it instead using 'move'
error: at 36:5: [INIT-UseAfterMove] In function 'init_use_after_move', block 'entry': variable 'a' is used after move
    |
 35 |     b = move a;
 36 |     call take(move a);
    |     ^^^^^^^^^^^^^^^^^
 37 |     return
    |
error: at 23:5: [SUB-ReturnValueLeak] In function 'sub_copy_of_non_copy', block 'entry': value 'a' of type Linear is not consumed at return
    |
 17 | # `copy` of a non-Copy type is a substructural-statement violation.
 18 | fn sub_copy_of_non_copy(a: Linear) {
    |                         --------- variable declared here
 19 |   b: Linear;
    |
    | ...
    |
 22 |     call take(move b);
 23 |     return
    |     ^^^^^^
 24 | }
    |
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
error: at 37:5: [SUB-ReturnValueLeak] In function 'init_use_after_move', block 'entry': value 'b' of type Linear is not consumed at return
    |
 32 | fn init_use_after_move(a: Linear) {
 33 |   b: Linear;
    |   ---------- variable declared here
 34 |   entry:
    |
    | ...
    |
 36 |     call take(move a);
 37 |     return
    |     ^^^^^^
 38 | }
    |
  hint: linear values must be consumed or returned before function exit. Try moving or dropping it.
